--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
     "db_name": "tutorials",
-    "db_host": "localhost",
+    "db_host": "172.29.176.1",
     "db_user": "root",
-    "db_password": "MYSQL1234.com",
+    "db_password": "YES",
     "debug": true,
     "swagger_ui": true,
-    "api_host": "localhost",
+    "api_host": "0.0.0.0",
     "api_port": 5000
 }
