--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
   "homepage": "https://jameswebbtelescope.github.io/RaspberryPiTutorials_uge10_11",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
