--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,6 +51,11 @@ jobs:
         with:
           # Upload dist folder
           path: './frontend/dist'
+      - name: Upload assets
+        uses: actions/upload-pages-artifact@v4
+        with:
+          # Upload dist folder
+          path: './frontend/dist/assets'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
