--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Raspberry Pi Tutorials",
+  "name": "raspberrypitutorials",
   "private": false,
   "version": "0.1.0",
   "type": "module",
