--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "build": "vite build && cp dist/index.html dist/404.html",
+    "build": "vite build && copy dist\\index.html dist\\404.html",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -41,6 +41,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
+    "shx": "^0.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
     "vite": "^7.3.0"
